[package]

name = "chainbuf"
version = "0.0.5"
authors = [ "Roma Sokolov <sokolov.r.v@gmail.com>" ]
license = "MIT"
description = "Fast chained buffers"
repository = "https://github.com/little-arhat/rust-chainbuf"
keywords = ["io", "data-structure", "zero-copy"]

[lib]
name = "chainbuf"
path = "src/lib.rs"
doctest = true

[features]
default = ["nix"]

[dev-dependencies]
rand = "0.3.8"
tempdir = "0.3"

[dependencies]
libc = "0.1.10"

[dependencies.nix]
version = "0.7.0"
optional = true


default-features = true

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[profile.test]
opt-level = 0
debug = true
